@@ -6,24 +6,26 @@ AUX curl-fix-gnutls-nettle.patch 1186 SHA256 d7a0f1ae6dcd50adddc9d7cd6dfcdb6b5ba
 AUX curl-respect-cflags-3.patch 406 SHA256 b87bf2c491b057bc5af5258fffcf72d7c5e86b03218f497f097eeca845c0bc0d SHA512 3219e4e67d534e35012909243fc8d69d58989462db44dd507c502e7aaa299f1d9a01392e2c83797cc2bdb53d503470c5d6e7bf94572a6ccc6e5eafcc0466bc54 WHIRLPOOL 5d61ec7f36376bd9712e0fc7984006462ab27a7e2003dd92a8d9e78e97a2e620a5cbf6a62855ebff45b2fbf9f0bca821ffdf6ce8ff81cf2a047af9e168fb61bd
 DIST curl-7.39.0.tar.bz2 3241619 SHA256 b222566e7087cd9701b301dd6634b360ae118cc1cbc7697e534dc451102ea4e0 SHA512 9d82e29c0b40530080c62bc3b81e729092b6de0dc3551e709ab1e65cb451259a5380f155fc911664ef523f57ea4be80bb27b330b720ad9a8bc3d9b967bdc3fd2 WHIRLPOOL 05fe3cd33a7716f88b63d3f3d8e9da49dec166cb42064d52ec2a182f68e792e83dd16d53edd1cd1b996a5f262faed1e1163197e1c3f717827859bd73e1570c36
 DIST curl-7.42.0.tar.bz2 3330103 SHA256 32557d68542f5c6cc8437b5b8a945857b4c5c6b6276da909e35b783d1d66d08f SHA512 8a6bf3ad4462ee8b2370e85382275f1d646565bcedded070c4cd5c87a610bae200c5c2803515514796357b82cddcc4c0c82ad04793a3c5ea4f4230c51720aed6 WHIRLPOOL 9da3108732680c26d12dc8f55b6ec6294995cfca53d7fe7be5387c04466d51cd96439b9c0ca30335b1124bc5e287dc18a62c090c71e9f3b4eb084cdd821d5b77
+DIST curl-7.42.1.tar.bz2 3327304 SHA256 e2905973391ec2dfd7743a8034ad10eeb58dab8b3a297e7892a41a7999cac887 SHA512 846c2d2bc73d39240686bf54e4c02553a1ca1640123fef30538cfc8a6317650f4cb9f1cc882016b7826ef9c84cb92adbfa24e55d59d2e7203bdcb12835fb474f WHIRLPOOL ff826e11812334ebca650c54788bf1b81b2927f7b9607b10e79cc70f6d1f9b893aebc816914158243510ffaead3b15a21ce10e7180eeb175b0b503e9ac8b0c6e
 EBUILD curl-7.39.0.ebuild 7315 SHA256 0a1c49652d6d65d672b0a6b5fcdcd1446e9665443460566d09d2e1e9426fb894 SHA512 48d6b89855d43359f166493dbcb08157bdc7dc63105190791dc8350567a9685071a5fe9761b124d6d43012c941ccf8f394e9ba9eecc1f20f673587650c4a2ae8 WHIRLPOOL e4f6f349a0ddc117bfe6c6d020482cfd9474b27312edcfb27c0af4783175f646cd0e2e3c29f306b266838f7f38511fec6dfd3cafcf973a4d4d4ae117a407bc16
 EBUILD curl-7.42.0.ebuild 7330 SHA256 7bdd50ea9c9e7585dfe2b4463b2ff22fd6f24537b1599a7e4824afd3f0db3116 SHA512 4acfafb5a42c6032377233c255e1cb3275d72d420a9ad082e988f32b504d33229d0ed6dad674a77e0cadf0e839605057ae6ea4b2ffdf354c7464bbed853f16d7 WHIRLPOOL 4934a2a827d1c9b3852e91d3026aa20a3d56c5bbae43c07548d58577e0f976901814a5001ea694d1d1c01166c458a1b0f3a4b002cf0b2c532a2e35aa045c147d
-MISC ChangeLog 59349 SHA256 64e2f5a03d08c7199bb4d0859a855744ebcfeb745220efc425c69c7d06147518 SHA512 b0203a336641c2d9c9593ce921e52ce5db5bd4333da906a2b52db415caddac1dd1534e719f68afdc6ccd4bfa5c9c5c91b614c0ed4772b39a5b9bf5a66051bba7 WHIRLPOOL 775b2284bf4f25e160accfabee704557bc0fe5ab9657950ab1498ad00c6619fac5db7b89571f3ddd06c9e99b5eab56d08161b3ec4e170ff7eaf4890333d1e39e
+EBUILD curl-7.42.1.ebuild 7343 SHA256 715f2d2eae46de642b0d810bb3e5605eb8f648d31a6190d87f111d93c6400ac7 SHA512 44b8bb3bacd575f384bef447c79e8f6d7da09691758bbeeb717a4392b8ba8da9b9313798fcfa269399b157a25bad609ac3602bfcc3e8c0340a6eb5a994d1a34e WHIRLPOOL 3ac817061d1410fd58828cc89d08284c4417b6b3170d8d21ffc1649e9ab49bb783520b92eeee4912a02f46c2b52e745c1a7642a2bd85e3d555e788b812d29a6e
+MISC ChangeLog 59475 SHA256 ce3fdd2d2417d2c8b908762f273a863a9bfe9804c0badafd9137fcd063137948 SHA512 5660f627bbaf290b4e08e4785eb3a983abdb3eee0d82d709a05fd69eeffa8aedb78f4ba59639ada6bc255809e3bff0fa056af8aea6dd1feffcfbc382b3efe4eb WHIRLPOOL 0c66b7e5bd6ff7faca87bc54abf44e746e1e6f14fba898165f7306e06976409c1c87e1f3fc55ac108430259fc93fa79d2f73c1f73c4ffe9fb1da8d4156137c0e
 MISC metadata.xml 868 SHA256 df66fe73acfdaff0fda0595656e112e6cfd4aebde2c52237c868c8031306e12e SHA512 a948ea9d372475d680c6f6fe4617ea5151d4378b1d5ea09e0566a88e403c9ed0a562c5426340bb1b03cf58a99c1f22411973bf215aa37ce8d30662a0e0101e4b WHIRLPOOL 0e058b6bb29d6c997a36a2563402b969b6dfa06912c3f8b854f8d89eb4113aa7fb376594ac0c756f1b59b3080aa508dab09426a9dfa982de56733f097baf9f37
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVQKHfAAoJELp701BxlEWfgF4QAMcxxkNvrgNmTa/xtbilYCOO
-bNZ0YjeR3caczsAtMrfMZudeP9Zlz4eHScyTYJHB4w3Mw7Dy06yvFh4HTVsRq2y6
-tcRS+TZia60XOi9ZRhjwzHST5NfGh5AtN6xJ41GeKImGCUl3kGBqaFyEExnpCO/Z
-HQbWCDUtcVGzLW2QjOgmdfqyG5gAfAmfOFKuk9uOkznHrnWXikJ1kMY7h5hkCW3C
-oCa8sEHOsFDmnRpx6TPkqrDnm2eDnuq7L2WsMiKKyhcej3OaSP3ZttxJ3K7RcJjv
-XFuWwPckd+or1fPZXVNeeqn78Ofx/RF8Gm4LiGH6t8C7nV68jejYN2H6Njn8uqyp
-HEgYeMAcjXQNKpTI39iTbPH9L2UtNsTAzjgRmMDIYlSqqAUJO+R6ywwAMsEngsuq
-AKriXOjlCgXKkFJfjcg7DryAd3AsgK3t33y5rm75Wp9C9xur6y6Ip34xPT0rhh7U
-L3VeCJZ5omHHZx/TrE7XIrm3H8qRxpDd80ohW4GWaJX1ufUta57AloNwpO0tk+yf
-seqA7YBO42NHnLJp6ly9XNRP0xUNulO2avLAPGBJS2+ZvD/l4hx0ep1/6tb7XNIJ
-la8QJdlcz8cnCaO/piObFyoO9QQQZrPua3u+Xu0D/NCiM8OwDY18zDa/GXr62hlC
-7kNWz30t5VBMNBdZl5Gr
-=3pUr
+iQIcBAEBCAAGBQJVQLctAAoJEJOE+m71LUu6Nw8P/jBZjcU++e+qr41V4Ul2e+Sa
+HuG3ibvvTn7hjsJ1O4Two+vxnhdid5Xip27rTK1vxOtj3EqD4R+ciLnD9tu7Ukjk
+8PYzBK54b4G3K/lv/3n9fWZdLnUhVNgOFq6pHmyi7VVnl8h642zGf+uVjl/oAGLR
+5u0tvtOk8kCCO+JjtVjfsx3p886pMvh4bDLF2t5vvnKi2T6WgsPDSi1ztSkVuORX
+q9xSzM8ScyVXIHNozAKOah2IbGmcMxAjf+g6buD0OxyMG6fLQAbZx3++p1gp8dst
+yrFwu/GXAItL/ZoVDlEv8oms0qCbO1INu3lk2vhWnGz3jDEDZKt/lo1Axz7bLzM6
+oEFGHuwd7U8u5HG8eka0aZkkROEFKXDmg43AyijaikWkNxwNbQfe4LrK5hcLUM9S
+xnfqRWF+wgObNHYQxIxktR/u687H8RtQHQtnNU+vUy47UF0n1gsHP4wFPZ5fEgGF
+e4vUm/ZDMwEcEzJrkS6gabRvQRlHUkE/xqh0Qn3a4cOrcP2vY14A15+yp7j3mQNu
+mP6X8xtMSkG9s6mXwAJp/lFG57bweMVTM6Wi+qzNeEbmmyqP8WxB0u6AN5wdozHu
+2CgBnEhF+tXc8x1HY8g9XD9nuROyfBTzAHCpIttIbmayrLuCtVfl4JctKbvHcff3
+S+9XUGg1SAFPdAtzep0x
+=xCFm
 -----END PGP SIGNATURE-----
