@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/curl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.404 2015/04/29 09:18:23 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.405 2015/04/29 10:47:51 blueness Exp $
+
+*curl-7.42.1 (29 Apr 2015)
+
+  29 Apr 2015; Anthony G. Basile <blueness@gentoo.org> +curl-7.42.1.ebuild:
+  Version bump.
 
   29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> curl-7.42.0.ebuild:
   Stable for sparc, wrt bug #547376
